--- a/src/main/resources/templates/incomes.html
+++ b/src/main/resources/templates/incomes.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Income List</title>
+    <title>Incomes</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.0/css/bootstrap.min.css}">
 </head>
 <body>
-<h1>Incomes</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Source</th>
-        <th>Amount</th>
-        <th>Date</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="income : ${incomes}">
-        <td th:text="${income.source}"></td>
-        <td th:text="${income.amount}"></td>
-        <td th:text="${income.date}"></td>
-    </tr>
-    </tbody>
-</table>
-<a href="/incomes/new">Add New Income</a>
+<div th:replace="layout :: content">
+    <div th:fragment="content">
+        <h1>Incomes</h1>
+        <a class="btn btn-primary" th:href="@{/incomes/new}">Add New Income</a>
+        <table class="table mt-3">
+            <thead>
+            <tr>
+                <th>Amount</th>
+                <th>Source</th>
+                <th>Date</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="income : ${incomes}">
+                <td th:text="${income.amount}"></td>
+                <td th:text="${income.source}"></td>
+                <td th:text="${income.date}"></td>
+                <td>
+                    <a class="btn btn-secondary" th:href="@{/incomes/edit/{id}(id=${income.id})}">Edit</a>
+                    <a class="btn btn-danger" th:href="@{/incomes/delete/{id}(id=${income.id})}">Delete</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
